--- a/spring-webpage.yml
+++ b/spring-webpage.yml
@@ -16,7 +16,7 @@ metadata:
 spec:
   replicas: 3
   selector:
-    matchLables:
+    matchLabels:
       app: springboot
   template:
     metadata:
